# AI-rag

./: main.py  pyproject.toml
app/embeddings/: base_embeddings.py  huggingface_embeddings.py
app/loaders/: PDF_loader.py  base_loader.py  web_loader.py
app/splitters/: base_splitter.py  recursive_splitter.py
app/utils/: logger.py
